# NumericalAnalysis

./: CMakeLists.txt  EigenValueSystem.cpp  EigenValueSystem.h  Intergate.cpp  Intergate.h  Interpolation.cpp  Interpolation.h  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h  ODE.cpp  ODE.h  README.md  TestIntergate.cpp  TestIntergate.h  TestLinearSystem.cpp  TestLinearSystem.h  main.cpp
